--- a/lostcity/src/_includes/_header.html
+++ b/lostcity/src/_includes/_header.html
@@ -1,10 +1,7 @@
 
 <div class="header-wrapper">
-<img class= "logo" src="/images/logo.png" alt="lost city diner">
+<img class= "logo" src="/images/wordmark.svg" alt="lost city diner">
 
-<button><a href="/">home</a></button>
-<button><a href="/about">about</a></button>
-<button><a href= "/menu_page">menus</a></button>
-<button><a href="/order_form">order</a></button>
+{% include "_nav.html" %}
 
 </div>
