--- a/lostcity/src/styles/base.scss
+++ b/lostcity/src/styles/base.scss
@@ -1,5 +1,11 @@
-@import "shared/shared";
+@import "utilities", "shared/shared", "slideshow";
 
 * {
     font-size: 32px;
+
+
+}
+
+.is-active {
+    color: red !important;
 }
