--- a/lostcity/src/styles/shared/_footer.scss
+++ b/lostcity/src/styles/shared/_footer.scss
@@ -1,3 +1,8 @@
+* {
+    font-family: sans-serif;
+
+}
+
 .footer-wrapper {
 
     display: grid;
@@ -11,7 +16,7 @@
 h3 {
     font-size: 60%;
     font-weight: 200;
-    color: white;
+    color: black;
     text-transform: capitalize;
     text-decoration: none;
     text-align: left;
