--- a/lostcity/src/styles/shared/_header.scss
+++ b/lostcity/src/styles/shared/_header.scss
@@ -4,31 +4,41 @@
     margin-right: 5%;
     margin-left: 5%;
 
+    nav {
+        grid-column: 2/ span 4;
+
+        ul {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+
 }
 
-button {
-    color: white;
-    background-color: red;
+.button__header {
+    color: black;
+    background-color: white;
     border-radius: 25px;
     text-decoration: none;
-    border-color: red;
-    margin: 20%;
+    border-color: white;
 
-}
-
-
-
-a {
-    color: white;
-    background-color: red;
-    text-decoration: none;
+    padding: 8px 25px 8px 25px;
+    box-shadow: 3px 5px grey;
     font-size: 75%;
+    display: block;
+    margin: 20% 0;
+
+
 }
+
+
+
 
 .logo {
     grid-column: 1/2;
     max-width: 100%;
-    padding-top: 7%;
+    padding-top: 10%;
     width: 80%;
+
 
 }
