background color and falling animation

--- a/lostcity/src/_includes/_header.html
+++ b/lostcity/src/_includes/_header.html
@@ -1,7 +1,6 @@
-
 <div class="header-wrapper">
-<img class= "logo" src="/images/wordmark.svg" alt="lost city diner">
+    <img src="/images/wordmark.svg" class="logo" alt="lost city diner">
 
-{% include "_nav.html" %}
+    {% include "_nav.html" %}
 
 </div>
