--- a/lostcity/src/styles/menu_page.scss
+++ b/lostcity/src/styles/menu_page.scss
@@ -4,6 +4,8 @@
     background-color: whitesmoke;
 }
 
+/*why are the nav buttons slightly higher on this page??*/
+
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
