--- a/lostcity/src/styles/homepage.scss
+++ b/lostcity/src/styles/homepage.scss
@@ -1,5 +1,5 @@
 * {
-    background-color: whitesmoke;
+
     font-family: sans-serif;
 
 
@@ -8,12 +8,15 @@
 
 
 
-
+body {
+    background-color: whitesmoke;
+}
 
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: .5fr 1fr;
+    background-color: whitesmoke;
 
 }
 
@@ -47,133 +50,12 @@
 
 
 
-.assets {
-    margin-top: 10%;
-    margin-left: 20%;
-    grid-column: 2/4;
-    grid-row: 1/3;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-}
-
-.assets__milkshake {
-    grid-column: 1/2;
-    grid-row: 1/2;
-    z-index: 0;
-    transform: rotate(20deg);
-
-
-}
-
-.assets__burger {
-    grid-column: 2/3;
-    grid-row: 1/2;
-    z-index: 0;
-    transform: rotate(10deg) scale(2, 2);
-
-}
-
-.assets__fries {
-    grid-column: 3/4;
-    grid-row: 1/2;
-    transform: rotate(-10deg);
-}
-
-.assets__milkshake--1 {
-    grid-column: 3/4;
-    grid-row: 3/4;
-    z-index: 0;
-    transform: rotate(-15deg) scale(1.5, 1.5);
-}
-
-.assets__burger--1 {
-    grid-column: 1/2;
-    grid-row: 3/4;
-    z-index: 0;
-    transform: rotate(10deg);
-}
-
-.assets__fries--1 {
-    grid-column: 2/3;
-    grid-row: 3/4;
-    z-index: 0;
-    transform: rotate(5deg) scale(.75, .75);
-}
-
-
 
 img {
 
     max-width: 30%;
 }
 
-/*why isn't my pulse working?
-animation: pulse 1s infinite;
-
-}
-
-@keyframes pulse {
-  0% {transform: scale (.5, .5);}
-  100%{transform: scale (1, 1);}
-}
-*/
-
-
-img:hover {
-
-
-    animation: shake 1.0s;
-
-    animation-iteration-count: infinite;
-
-
-    @keyframes shake {
-        0% {
-            transform: translate(1px, 1px) rotate(0deg);
-        }
-
-        10% {
-            transform: translate(-1px, -2px) rotate(-1deg);
-        }
-
-        20% {
-            transform: translate(-3px, 0px) rotate(1deg);
-        }
-
-        30% {
-            transform: translate(3px, 2px) rotate(0deg);
-        }
-
-        40% {
-            transform: translate(1px, -1px) rotate(1deg);
-        }
-
-        50% {
-            transform: translate(-1px, 2px) rotate(-1deg);
-        }
-
-        60% {
-            transform: translate(-3px, 1px) rotate(0deg);
-        }
-
-        70% {
-            transform: translate(3px, 1px) rotate(-1deg);
-        }
-
-        80% {
-            transform: translate(-1px, -1px) rotate(1deg);
-        }
-
-        90% {
-            transform: translate(1px, 2px) rotate(0deg);
-        }
-
-        100% {
-            transform: translate(1px, -2px) rotate(-1deg);
-        }
-    }
-}
 
 p {
     font-size: 50%;
@@ -220,8 +102,38 @@ h3 {
     margin-left: 30%;
 }
 
+.assets {
 
-@media (max-width: 499px) {
+    width: 100%;
+    height: 100%;
+    margin: -280px 40px 54px -34px;
+
+    animation: falling 10s infinite linear;
+
+    -webkit-animation: falling 10s infinite linear;
+    -moz-animation: falling 10s infinite linear;
+    color: transparent;
+
+}
+
+@keyframes falling {
+    0% {
+        opacity: 1;
+        -webkit-transform: translate(0, 0px) rotateZ(0deg);
+    }
+
+    75% {
+        opacity: 1;
+        -webkit-transform: translate(50%, 50%) rotateZ(270deg);
+    }
+
+    100% {
+        opacity: 0;
+        -webkit-transform: translate(100%, 100%) rotateZ(360deg);
+    }
+}
+
+@media screen and (max-width: 480px) {
 
     img {
         max-width: 20%;
