--- a/lostcity/src/styles/shared/_header.scss
+++ b/lostcity/src/styles/shared/_header.scss
@@ -13,6 +13,9 @@
         }
     }
 
+    background-color: whitesmoke;
+
+
 }
 
 .button__header {
@@ -27,6 +30,7 @@
     font-size: 75%;
     display: block;
     margin: 20% 0;
+    background-color: whitesmoke;
 
 
 }
@@ -39,6 +43,7 @@
     max-width: 100%;
     padding-top: 10%;
     width: 80%;
+    background-color: whitesmoke;
 
 
 }
