--- a/lostcity/src/styles/homepage.scss
+++ b/lostcity/src/styles/homepage.scss
@@ -193,7 +193,7 @@ h3 {
     }
 
     h1 {
-        color: black;
+        color: green;
         font-weight: 500;
         text-transform: capitalize;
         list-style-type: none;
