--- a/lostcity/src/styles/homepage.scss
+++ b/lostcity/src/styles/homepage.scss
@@ -27,6 +27,8 @@ body {
     color: black;
     line-height: 100%;
     margin-top: 15%;
+    background-color: white;
+
 
 
 
@@ -36,13 +38,15 @@ body {
 .text {
     grid-column: 1/2;
     grid-row: 2/3;
+    background-color: white;
+
 
 
 
 }
 
 .open {
-    background-color: white;
+
     box-shadow: 3px 5px grey;
     grid-column: 1/2;
     grid-row: 2/3;
@@ -50,13 +54,134 @@ body {
     padding: 10%;
 }
 
+.assets {
+    margin-top: 10%;
+    margin-left: 20%;
+    grid-column: 2/4;
+    grid-row: 1/3;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.assets__milkshake {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    z-index: 0;
+    transform: rotate(20deg);
+
+
+}
+
+.assets__burger {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    z-index: 0;
+    transform: rotate(10deg) scale(2, 2);
+
+}
+
+.assets__fries {
+    grid-column: 3/4;
+    grid-row: 1/2;
+    transform: rotate(-10deg);
+}
+
+.assets__milkshake--1 {
+    grid-column: 3/4;
+    grid-row: 3/4;
+    z-index: 0;
+    transform: rotate(-15deg) scale(1.5, 1.5);
+}
+
+.assets__burger--1 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    z-index: 0;
+    transform: rotate(10deg);
+}
+
+.assets__fries--1 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+    z-index: 0;
+    transform: rotate(5deg) scale(.75, .75);
+}
 
 
 
-/*img {
+img {
 
     max-width: 30%;
-}*/
+}
+
+/*why isn't my pulse working?
+animation: pulse 1s infinite;
+
+}
+
+@keyframes pulse {
+  0% {transform: scale (.5, .5);}
+  100%{transform: scale (1, 1);}
+}
+*/
+
+
+img:hover {
+
+
+    animation: shake 1.0s;
+
+    animation-iteration-count: infinite;
+
+
+    @keyframes shake {
+        0% {
+            transform: translate(1px, 1px) rotate(0deg);
+        }
+
+        10% {
+            transform: translate(-1px, -2px) rotate(-1deg);
+        }
+
+        20% {
+            transform: translate(-3px, 0px) rotate(1deg);
+        }
+
+        30% {
+            transform: translate(3px, 2px) rotate(0deg);
+        }
+
+        40% {
+            transform: translate(1px, -1px) rotate(1deg);
+        }
+
+        50% {
+            transform: translate(-1px, 2px) rotate(-1deg);
+        }
+
+        60% {
+            transform: translate(-3px, 1px) rotate(0deg);
+        }
+
+        70% {
+            transform: translate(3px, 1px) rotate(-1deg);
+        }
+
+        80% {
+            transform: translate(-1px, -1px) rotate(1deg);
+        }
+
+        90% {
+            transform: translate(1px, 2px) rotate(0deg);
+        }
+
+        100% {
+            transform: translate(1px, -2px) rotate(-1deg);
+        }
+    }
+}
+
 
 
 p {
