--- a/lostcity/src/_includes/layouts/default.njk
+++ b/lostcity/src/_includes/layouts/default.njk
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/styles/base.css">
     <link rel="stylesheet" href="/styles/{{ stylesheet }}.css">
-    
+
     <title> {% if title !== "home" %} {{ title }} | {% endif %} Lost City Diner </title>
 
-</head> 
+</head>
 
-<body>
+<body {% if title=="404" %}class="pg404" {% endif %}>
 
-{% include "_header.html"%}
+    {% include "_header.html"%}
 
-{{content | safe}}
+    {{content | safe}}
 
-{% include "_footer.html"%}
+    {% include "_footer.html"%}
 
-{% if javascript %}
+    {% if javascript %}
     <script type="text/javascript" src="/scripts/{{ javascript }}.js"></script>
-{% endif %}
+    {% endif %}
 
 </body>
 
