--- a/lostcity/src/styles/404.scss
+++ b/lostcity/src/styles/404.scss
@@ -1,39 +1,71 @@
-h1 {
-    font-size: 1000%;
+body {
+    background-color: whitesmoke;
+
+}
+
+.wrapper {
     text-align: center;
 }
 
-.slide-in-top {
-    animation: slide-in-top 3s ease-in infinite;
-    animation-timing-function: linear;
+.pg404 {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: space-between;
+    overflow-y: hidden;
+    position: relative;
+}
+
+h1 {
+    font-size: 1000%;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: center;
 
 }
 
+.assets {
+    padding: 1%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+    li {
+
+        // about random: http://jonibologna.com/sass-function-demos/#random
+        @for $i from 1 through 20 {
+            &:nth-child(#{$i}) {
+                svg {
+                    margin-top: random(200)+px;
+                    transform: rotate(random(300)+deg) scale(random(2)-.5);
+
+                }
+            }
+        }
+    }
+}
+
+.slide-in-top {
+    display: grid;
+    animation: slide-in-top 3s infinite;
+    animation-timing-function: linear;
+    position: absolute;
+}
 
 @keyframes slide-in-top {
     0% {
-        transform: translateY(-1000px);
-        opacity: 0
+        transform: translateY(-100vh);
+
     }
 
     50% {
         transform: translateY(0);
-        opacity: 1
+
     }
 
     100% {
-        transform: translateY(1000px);
-        opacity: 0
-    }
-}
+        transform: translateY(100vh);
 
-.assets {
-    margin-top: 10%;
-    margin-left: 20%;
-    grid-column: 2/4;
-    grid-row: 1/3;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    max-width: 10%;
+    }
+
+
 }
