--- a/lostcity/src/styles/shared/_header.scss
+++ b/lostcity/src/styles/shared/_header.scss
@@ -40,10 +40,101 @@
 
 .logo {
     grid-column: 1/2;
-    max-width: 100%;
-    padding-top: 10%;
-    width: 80%;
+    max-width: 80%;
+    padding-top: 15%;
+
     background-color: whitesmoke;
 
 
+}
+
+@media screen and (min-width:481px) and (max-width:800px) {
+    .header-wrapper {
+        text-align: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        margin-right: 5%;
+        margin-left: 5%;
+
+        nav {
+            grid-column: 1/3;
+            grid-row: 2/3;
+
+            ul {
+                display: flex;
+                justify-content: space-between;
+            }
+        }
+
+        background-color: whitesmoke;
+
+
+    }
+
+    .logo {
+
+        grid-row: 1/2;
+        width: 50%;
+
+
+
+
+        background-color: whitesmoke;
+
+        margin-left: 25%;
+        margin-right: 25%;
+
+
+
+    }
+
+    .button__header {
+        color: black;
+        background-color: white;
+        border-radius: 25px;
+        text-decoration: none;
+        border-color: white;
+
+        padding: 8px 25px 8px 25px;
+        box-shadow: 3px 5px grey;
+        font-size: 75%;
+        display: block;
+        margin: 0;
+
+
+
+    }
+}
+
+@media screen and (max-width:480px) {
+    .header-wrapper {
+        text-align: center;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        margin-right: 5%;
+        margin-left: 5%;
+
+        nav {
+            grid-column: 1/3;
+            grid-row: 2/4;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+
+            ul {
+                list-style-type: disc;
+                -webkit-columns: 2;
+                -moz-columns: 2;
+                columns: 2;
+                list-style-position: inside;
+
+
+            }
+        }
+
+        background-color: whitesmoke;
+
+
+    }
 }
