--- a/lostcity/src/styles/shared/_header.scss
+++ b/lostcity/src/styles/shared/_header.scss
@@ -96,6 +96,7 @@
         text-decoration: none;
         border-color: white;
 
+
         padding: 8px 25px 8px 25px;
         box-shadow: 3px 5px grey;
         font-size: 75%;
@@ -111,29 +112,85 @@
     .header-wrapper {
         text-align: center;
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-template-rows: .25fr 1fr;
+
         margin-right: 5%;
         margin-left: 5%;
 
         nav {
-            grid-column: 1/3;
-            grid-row: 2/4;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 1fr 1fr;
+            margin-right: auto;
+            margin-left: auto;
+            grid-column: 1/2;
+            grid-row: 2/3;
 
-            ul {
-                list-style-type: disc;
-                -webkit-columns: 2;
-                -moz-columns: 2;
-                columns: 2;
-                list-style-position: inside;
 
+
+
+
+
+            .u-list-reset {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                text-align: center;
 
             }
+
+            li {
+                display: inline-grid;
+                padding: 10%;
+                margin-right: auto;
+                margin-left: auto;
+
+            }
+
+
+
+
         }
 
         background-color: whitesmoke;
+
+
+    }
+
+
+
+    .logo {
+        margin-top: 15%;
+        margin-bottom: 0;
+        padding: 0;
+
+        grid-column: 1/2;
+        grid-row: 1/2;
+        width: 100%;
+
+
+
+
+        background-color: whitesmoke;
+
+        margin-right: auto;
+        margin-left: auto;
+
+
+
+    }
+
+    .button__header {
+        color: black;
+        background-color: white;
+        border-radius: 25px;
+        text-decoration: none;
+        border-color: white;
+
+        padding: 8px 25px 8px 25px;
+        box-shadow: 3px 5px grey;
+        font-size: 75%;
+        display: block;
+        margin: 0;
+
 
 
     }
