nav buttons for mobile

--- a/lostcity/src/styles/shared/_header.scss
+++ b/lostcity/src/styles/shared/_header.scss
@@ -119,8 +119,9 @@
         margin-left: 5%;
 
         nav {
+            display: inline-grid;
             margin-right: auto;
-            margin-left: auto;
+            margin-left: 12%;
             grid-column: 1/2;
             grid-row: 2/3;
 
