--- a/lostcity/src/styles/about.scss
+++ b/lostcity/src/styles/about.scss
@@ -47,3 +47,11 @@ body {
 
 
 }
+
+@media screen and (min-width:481px) and (max-width:800px) {
+    img {
+        min-width: 150%;
+    }
+}
+
+@media screen and (max-width:480px) {}
