--- a/lostcity/src/styles/shared/_header.scss
+++ b/lostcity/src/styles/shared/_header.scss
@@ -75,7 +75,7 @@
     .logo {
 
         grid-row: 1/2;
-        width: 50%;
+        width: 100%;
 
 
 
@@ -110,7 +110,7 @@
 
 @media screen and (max-width:480px) {
     .header-wrapper {
-        text-align: center;
+
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: .25fr 1fr;
@@ -118,10 +118,11 @@
         margin-right: 5%;
         margin-left: 5%;
 
+
         nav {
-            display: inline-grid;
+
             margin-right: auto;
-            margin-left: 12%;
+            margin-left: auto;
             grid-column: 1/2;
             grid-row: 2/3;
 
@@ -136,6 +137,8 @@
                 grid-template-rows: 1fr 1fr;
                 text-align: center;
 
+
+
             }
 
             li {
@@ -143,6 +146,8 @@
                 padding: 10%;
                 margin-right: auto;
                 margin-left: auto;
+
+
 
             }
 
@@ -191,6 +196,7 @@
         font-size: 75%;
         display: block;
         margin: 0;
+
 
 
 
