--- a/lostcity/src/styles/order_form.scss
+++ b/lostcity/src/styles/order_form.scss
@@ -59,10 +59,7 @@ input {
 
 }
 
-.radio_buttons {
-    padding: 0;
-    margin: 0;
-}
+
 
 #zip {
     max-width: 25%;
@@ -75,6 +72,10 @@ input {
 #cvc {
     max-width: 15%;
 }
+
+/*.card_details {
+    margin-top: 6%;
+}*/
 
 textarea {
     margin-top: 1%;
@@ -159,7 +160,18 @@ h1 {
 
 
     text-align: center;
+    padding: 0;
+    margin-top: 5%;
+    margin-bottom: 5%;
 
+
+}
+
+.radio {
+    height: 10vw;
+    width: 50%;
+
+    border: 2px solid grey;
 
 }
 
