--- a/lostcity/src/styles/shared/_header.scss
+++ b/lostcity/src/styles/shared/_header.scss
@@ -57,11 +57,13 @@
         margin-right: 5%;
         margin-left: 5%;
 
+
         nav {
             grid-column: 1/3;
             grid-row: 2/3;
 
             ul {
+
                 display: flex;
                 justify-content: space-between;
             }
@@ -99,7 +101,7 @@
 
         padding: 8px 25px 8px 25px;
         box-shadow: 3px 5px grey;
-        font-size: 75%;
+        font-size: 65%;
         display: block;
         margin: 0;
 
@@ -143,9 +145,12 @@
 
             li {
                 display: inline-grid;
-                padding: 10%;
+                padding: 2vw;
                 margin-right: auto;
                 margin-left: auto;
+                margin: 2vw;
+                margin-top: 0;
+                margin-bottom: 0;
 
 
 
@@ -192,10 +197,11 @@
         border-color: white;
 
         padding: 8px 25px 8px 25px;
-        box-shadow: 3px 5px grey;
-        font-size: 75%;
+        box-shadow: 2px 4px grey;
+        font-size: 55%;
         display: block;
         margin: 0;
+
 
 
 
