--- a/lostcity/src/styles/about.scss
+++ b/lostcity/src/styles/about.scss
@@ -4,54 +4,140 @@ body {
 }
 
 .wrapper {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: auto;
+}
+
+.writing {
+    grid-column: 1/2;
+}
+
+.reviews {
+    font-size: 50%;
+    line-height: 2vw;
+    margin-left: 15%;
+}
+
+.reviewers {
+    font-weight: 400;
+    margin-left: 15%;
+    margin: 0;
+
+
 }
 
 .slideshow__about {
-    grid-column: 2/3;
-    grid-row: 2/3;
+    grid-column: 2/4;
+    grid-row: 1/4;
     text-align: center;
 }
 
 .slideshow__about--container {
-    grid-column: 2/3;
-    grid-row: 2/3;
     display: inline-block;
-
-
+    grid-column: 2/4;
+    grid-row: 1/4;
+    margin-top: 5vw;
 }
 
 .mySlides {
     background-color: whitesmoke;
-    min-height: 10vw;
-    max-height: 10vw;
-    min-width: 10vw;
-    max-width: 10vw;
-
-
+    height: 40vw;
+    width: 40vw;
 }
 
 .button__slideshow {
-    color: black;
     background-color: white;
-    border-radius: 25px;
-    text-decoration: none;
     border-color: white;
-
-    padding: 8px 25px 8px 25px;
-    box-shadow: 3px 5px grey;
-    font-size: 75%;
+    border-radius: 25px;
+    box-shadow: 2px 3px grey;
+    color: black;
     display: inline-block;
-    margin: 20% 0;
+    font-size: 55%;
+    margin: 2vw;
+    padding: 8px 25px 8px 25px;
+    text-decoration: none;
+}
+
+@media screen and (min-width:481px) and (max-width:850px) {
+
+
+
+    .wrapper {
+        grid-template-columns: 1fr;
+        grid-template-rows: .5fr 1fr 1fr;
+    }
+
+    .writing {
+        grid-column: 1/2;
+        grid-row: 2/4;
+        margin-left: 10vw;
+        margin-right: 10vw;
+        margin-top: 0;
+    }
+
+    .reviews {
+        line-height: 5vw;
+        margin-bottom: 10vw;
+        margin-left: 5vw;
+    }
+
+    .reviewers {
+        line-height: 0;
+        margin-bottom: 5vw;
+        margin-top: 3vw;
+    }
+
+    .slideshow__about {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        margin: 5vw;
+        display: inline-block;
+    }
+
+    .button__slideshow {
+        margin-top: 5vw;
+    }
 
 
 }
 
-@media screen and (min-width:481px) and (max-width:800px) {
-    img {
-        min-width: 150%;
+@media screen and (max-width:480px) {
+    .wrapper {
+        grid-template-columns: 1fr;
+        grid-template-rows: .5fr 1fr 1fr;
+    }
+
+    .writing {
+        grid-column: 1/2;
+        grid-row: 2/4;
+        margin-left: 10vw;
+        margin-right: 10vw;
+        margin-top: 0;
+    }
+
+    .reviews {
+        line-height: 5vw;
+        margin-bottom: 12vw;
+        margin-left: 5vw;
+    }
+
+    .reviewers {
+        line-height: 0;
+        margin-bottom: 5vw;
+        margin-top: 3vw;
+        font-size: 75%;
+
+    }
+
+    .slideshow__about {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        margin-bottom: 10vw;
+        display: inline-block;
+    }
+
+    .button__slideshow {
+        margin-top: 5vw;
     }
 }
-
-@media screen and (max-width:480px) {}
