--- a/lostcity/src/styles/404.scss
+++ b/lostcity/src/styles/404.scss
@@ -57,14 +57,22 @@ h1 {
     }
 
     100% {
-        transform: translateY(100vh);
+        transform: translateY(75vh);
     }
 }
 
-@media screen and (min-width:481px) and (max-width:800px) {
+@media screen and (min-width:481px) and (max-width:850px) {
+
+    h1 {
+        font-size: 800%;
+    }
 
     img {
         min-width: 150%;
+    }
+
+    .assets {
+        transform: scale(.75);
     }
 
 }
@@ -72,25 +80,11 @@ h1 {
 @media screen and (max-width:480px) {
 
     .assets {
-        transform: scale(.5);
-        margin: 10%;
-        grid-template-columns: repeat(3, 1fr);
+        display: none;
     }
-
 
     h1 {
         font-size: 600%;
         margin-bottom: 50%;
-    }
-
-    li {
-        @for $i from 1 through 20 {
-            &:nth-child(#{$i}) {
-                svg {
-                    margin-top: random(100)+px;
-                    transform: rotate(random(300)+deg) scale(random(1)-.25);
-                }
-            }
-        }
     }
 }
