--- a/lostcity/src/styles/shared/_header.scss
+++ b/lostcity/src/styles/shared/_header.scss
@@ -1,3 +1,41 @@
+.assets {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 1%;
+
+    li {
+        @for $i from 1 through 20 {
+            &:nth-child(#{$i}) {
+                svg {
+                    margin-top: random(200)+px;
+                    transform: rotate(random(300)+deg) scale(random(2)-.5);
+                }
+            }
+        }
+    }
+}
+
+.slide-in-top {
+    animation-timing-function: ease-in;
+    animation: slide-in-top 3s infinite;
+    display: grid;
+    position: absolute;
+}
+
+@keyframes slide-in-top {
+    0% {
+        transform: translateY(-100vh);
+    }
+
+    50% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(100vh);
+    }
+}
+
 .header-wrapper {
     background-color: whitesmoke;
     display: grid;
@@ -36,6 +74,56 @@
 }
 
 @media screen and (min-width:481px) and (max-width:850px) {
+
+    .assets {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        padding: 1%;
+
+        li {
+            @for $i from 1 through 20 {
+                &:nth-child(#{$i}) {
+                    svg {
+                        margin-top: random(200)+px;
+                        transform: rotate(random(300)+deg) scale(random(2)-.5);
+                    }
+                }
+            }
+        }
+    }
+
+    .slide-in-top {
+        animation-timing-function: linear;
+        animation: slide-in-top 4s infinite;
+        display: grid;
+        position: absolute;
+    }
+
+    @keyframes slide-in-top {
+        0% {
+            transform: translateY(-100vh);
+        }
+
+        50% {
+            transform: translateY(0);
+        }
+
+        100% {
+            transform: translateY(75vh);
+        }
+    }
+
+    @media screen and (min-width:481px) and (max-width:850px) {
+
+        img {
+            min-width: 150%;
+        }
+
+        .assets {
+            transform: scale(.75);
+        }
+    }
+
 
     .header-wrapper {
         display: grid;
